# Engabra

./: Alternatives.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  TODO.txt  Terminology.dox  exampIdeas.txt  g3.h  ideas.txt  todo.txt
.github/workflows/: cmake-multi-platform.yml
admin/: DirverseOperations.lyx  TypeNameIdeas.lyx  exampIdeas.txt  ideas.txt  old.hpp  references.txt  todo.txt
admin/junk/: ImSpinSq.lyx  tmp_g3.hpp  tmp_traits.hpp
cmake/: CMakeLists.txt  func_setReleaseTag.cmake
demo/: CMakeLists.txt  helloEngabra.cpp
demos/: .gitignore  BibTexReferences.bib  CMakeLists.txt  DemoRigidBodyAttitude.lyx  README.md
doc/: CMakeLists.txt  Doxyfile.in  exProj_CMakeLists.txt
include/: CMakeLists.txt  Engabra  _.hpp  compare.hpp  engabra.hpp  g3_private.hpp  g3compare.hpp  g3const.hpp  g3consts.hpp  g3func.h  g3func.hpp  g3funcs.hpp  g3io.hpp  g3long.h  g3ops.h  g3ops.hpp  g3opsAdd.hpp  g3opsAdd_BiVector.hpp  g3opsAdd_ComPlex.hpp  g3opsAdd_DirPlex.hpp  g3opsAdd_ImSpin.hpp  g3opsAdd_MultiVector.hpp  g3opsAdd_Scalar.hpp  g3opsAdd_Spinor.hpp  g3opsAdd_TriVector.hpp  g3opsAdd_Vector.hpp  g3opsAdd_same.hpp  g3opsBin.hpp  g3opsBinAdd.hpp  g3opsMul.hpp  g3opsMul.inl  g3opsMul_BiVector.hpp  g3opsMul_ComPlex.hpp  g3opsMul_DirPlex.hpp  g3opsMul_ImSpin.hpp  g3opsMul_MultiVector.hpp  g3opsMul_Scalar.hpp  g3opsMul_Spinor.hpp  g3opsMul_TriVector.hpp  g3opsMul_Vector.hpp  (+19 more)
math/: MulTable.lyx  PolarForm.lyx
src/: CMakeLists.txt  engabra.cpp  foo.cpp
test/: CMakeLists.txt  README.md  checks.hpp  test_g3const_all.cpp  test_g3engabra.cpp  test_g3func_G2.cpp  test_g3func_exp.cpp  test_g3func_inv.cpp  test_g3helloEngabra.cpp  test_g3io_all.cpp  test_g3opsAdd_other.cpp  test_g3opsAdd_same.cpp  test_g3opsMul.cpp  test_g3opsMulAll.cpp  test_g3opsMul_BiVector.cpp  test_g3opsMul_ComPlex.cpp  test_g3opsMul_DirPlex.cpp  test_g3opsMul_ImSpin.cpp  test_g3opsMul_MultiVector.cpp  test_g3opsMul_Scalar.cpp  test_g3opsMul_Spinor.cpp  test_g3opsMul_TriVector.cpp  test_g3opsMul_Vector.cpp  test_g3opsMul_double.cpp  test_g3opsMul_same.cpp  test_g3opsSub_other.cpp  test_g3opsSub_same.cpp  test_g3publish_all.cpp  test_g3type_ctor.cpp  test_g3validity_all.cpp
tests/: CMakeLists.txt  README.md  _.cpp  _test.cpp  checks.hpp  template.cpp  test_common.hpp  test_engabra.cpp  test_g3_private.cpp  test_g3compare.cpp  test_g3compare_all.cpp  test_g3const.cpp  test_g3consts.cpp  test_g3func.cpp  test_g3func_amp.cpp  test_g3func_exp.cpp  test_g3func_ga.cpp  test_g3func_inv.cpp  test_g3func_mag.cpp  test_g3helloEngabra.cpp  test_g3io.cpp  test_g3opsAdd.cpp  test_g3opsAdd_other.cpp  test_g3opsBinAdd.cpp  test_g3opsMul.cpp  test_g3opsMul.hpp  test_g3opsMulAll.cpp  test_g3opsMul_BiVector.cpp  test_g3opsMul_Spinor.cpp  test_g3opsUni.cpp  test_g3opsUni_all.cpp  test_g3publish.cpp  test_g3traits.cpp  test_g3traits_all.cpp  test_g3type.cpp  test_g3type_ComPlex.cpp  test_g3type_DirPlex.cpp  test_g3type_plex.cpp  test_g3types.cpp  test_g3validity.cpp  (+1 more)
